test_output/output.txt
==== Running tests... ====
== Test #0 ==
2+3
18 * 24
5^3 + 21.24e+5
8 + 16e-4
123e99 * 135e1000
[Number ('2', 2.0)][Operator +][Number ('3', 3.0)][Newline]
[Number ('18', 18.0)][Operator *][Number ('24', 24.0)][Newline]
[Number ('5', 5.0)][Operator ^][Number ('3', 3.0)][Operator +][Number ('21.24e+5', 2124000.0)][Newline]
[Number ('8', 8.0)][Operator +][Number ('16e-4', 0.0016)][Newline]
[Number ('123e99', 1.23e+101)][Operator *][Number ('135e1000', inf)]
== Test #1 ==
['2.+3.', '.75+.25', '2eee10 * 3...5', '3...5', '2EEe-3', '5.6e', '7E', '1e+2e', '1e*2e', '2e.0', '10.E+5']
For '2.+3.', caught tokenization error: Number cannot end with decimal point: 2.
For '.75+.25', caught tokenization error: Invalid character '.'
For '2eee10 * 3...5', caught tokenization error: Number already has exponent field: 2ee
For '3...5', caught tokenization error: Number cannot end with decimal point: 3.
For '2EEe-3', caught tokenization error: Number already has exponent field: 2EE
For '5.6e', caught tokenization error: Number cannot end with exponent marker: 5.6e
For '7E', caught tokenization error: Number cannot end with exponent marker: 7E
For '1e+2e', caught tokenization error: Number already has exponent field: 1e+2e
For '1e*2e', caught tokenization error: Number cannot end with exponent marker: 1e
For '2e.0', caught tokenization error: Decimal point cannot be preceded by exponent marker: 2e.
For '10.E+5', caught tokenization error: Exponent marker cannot be preceded by decimal point: 10.E
== Test #2 ==
['2.0+3.0', '0.75+0.25*2', '2e10 + 3.5 * 8 - 2', '4/1*3^5-10', '2e-3/5.6*0.01', '18+5*3^2-100+2e4']
--------
2.0+3.0
[Number ('2.0', 2.0)][Operator +][Number ('3.0', 3.0)]
(+ 2 3)
['+', 'II', 0, 2.0, 3.0]
Reg[0]
2.0+3.0 evaluates to 5
--------
0.75+0.25*2
[Number ('0.75', 0.75)][Operator +][Number ('0.25', 0.25)][Operator *][Number ('2', 2.0)]
(+
  0.75
  (* 0.25 2)
)
['*', 'II', 0, 0.25, 2.0]
['+', 'IR', 1, 0.75, 0]
Reg[1]
0.75+0.25*2 evaluates to 1.25
--------
2e10 + 3.5 * 8 - 2
[Number ('2e10', 20000000000.0)][Operator +][Number ('3.5', 3.5)][Operator *][Number ('8', 8.0)][Operator -][Number ('2', 2.0)]
(-
  (+
    20000000000
    (* 3.5 8)
  )
  2
)
['*', 'II', 0, 3.5, 8.0]
['+', 'IR', 1, 20000000000.0, 0]
['-', 'RI', 2, 1, 2.0]
Reg[2]
2e10 + 3.5 * 8 - 2 evaluates to 20000000026
--------
4/1*3^5-10
[Number ('4', 4.0)][Operator /][Number ('1', 1.0)][Operator *][Number ('3', 3.0)][Operator ^][Number ('5', 5.0)][Operator -][Number ('10', 10.0)]
(-
  (*
    (/ 4 1)
    (^ 3 5)
  )
  10
)
['/', 'II', 0, 4.0, 1.0]
['^', 'II', 1, 3.0, 5.0]
['*', 'RR', 2, 0, 1]
['-', 'RI', 3, 2, 10.0]
Reg[3]
4/1*3^5-10 evaluates to 962
--------
2e-3/5.6*0.01
[Number ('2e-3', 0.002)][Operator /][Number ('5.6', 5.6)][Operator *][Number ('0.01', 0.01)]
(*
  (/ 0.002 5.6)
  0.01
)
['/', 'II', 0, 0.002, 5.6]
['*', 'RI', 1, 0, 0.01]
Reg[1]
2e-3/5.6*0.01 evaluates to 3.571428571428572e-06
--------
18+5*3^2-100+2e4
[Number ('18', 18.0)][Operator +][Number ('5', 5.0)][Operator *][Number ('3', 3.0)][Operator ^][Number ('2', 2.0)][Operator -][Number ('100', 100.0)][Operator +][Number ('2e4', 20000.0)]
(+
  (-
    (+
      18
      (*
        5
        (^ 3 2)
      )
    )
    100
  )
  20000
)
['^', 'II', 0, 3.0, 2.0]
['*', 'IR', 1, 5.0, 0]
['+', 'IR', 2, 18.0, 1]
['-', 'RI', 3, 2, 100.0]
['+', 'RI', 4, 3, 20000.0]
Reg[4]
18+5*3^2-100+2e4 evaluates to 19963
== Test #3 ==
['(2.0+3.0)*100', '(0.75+5.25)*(2+1)', '(2e10 + 3.5) * (8 - (1+1))', '(4/(2*3)^5)-(10)', '2e-3/(5.6*0.01)', '(18+(5*3))^(4-(100-98))']
--------
(2.0+3.0)*100
[Brace (][Number ('2.0', 2.0)][Operator +][Number ('3.0', 3.0)][Brace )][Operator *][Number ('100', 100.0)]
(*
  (+ 2 3)
  100
)
['+', 'II', 0, 2.0, 3.0]
['*', 'RI', 1, 0, 100.0]
Reg[1]
(2.0+3.0)*100 evaluates to 500
--------
(0.75+5.25)*(2+1)
[Brace (][Number ('0.75', 0.75)][Operator +][Number ('5.25', 5.25)][Brace )][Operator *][Brace (][Number ('2', 2.0)][Operator +][Number ('1', 1.0)][Brace )]
(*
  (+ 0.75 5.25)
  (+ 2 1)
)
['+', 'II', 0, 0.75, 5.25]
['+', 'II', 1, 2.0, 1.0]
['*', 'RR', 2, 0, 1]
Reg[2]
(0.75+5.25)*(2+1) evaluates to 18
--------
(2e10 + 3.5) * (8 - (1+1))
[Brace (][Number ('2e10', 20000000000.0)][Operator +][Number ('3.5', 3.5)][Brace )][Operator *][Brace (][Number ('8', 8.0)][Operator -][Brace (][Number ('1', 1.0)][Operator +][Number ('1', 1.0)][Brace )][Brace )]
(*
  (+ 20000000000 3.5)
  (-
    8
    (+ 1 1)
  )
)
['+', 'II', 0, 20000000000.0, 3.5]
['+', 'II', 1, 1.0, 1.0]
['-', 'IR', 2, 8.0, 1]
['*', 'RR', 3, 0, 2]
Reg[3]
(2e10 + 3.5) * (8 - (1+1)) evaluates to 120000000021
--------
(4/(2*3)^5)-(10)
[Brace (][Number ('4', 4.0)][Operator /][Brace (][Number ('2', 2.0)][Operator *][Number ('3', 3.0)][Brace )][Operator ^][Number ('5', 5.0)][Brace )][Operator -][Brace (][Number ('10', 10.0)][Brace )]
(-
  (/
    4
    (^
      (* 2 3)
      5
    )
  )
  10
)
['*', 'II', 0, 2.0, 3.0]
['^', 'RI', 1, 0, 5.0]
['/', 'IR', 2, 4.0, 1]
['-', 'RI', 3, 2, 10.0]
Reg[3]
(4/(2*3)^5)-(10) evaluates to -9.99948559670782
--------
2e-3/(5.6*0.01)
[Number ('2e-3', 0.002)][Operator /][Brace (][Number ('5.6', 5.6)][Operator *][Number ('0.01', 0.01)][Brace )]
(/
  0.002
  (* 5.6 0.01)
)
['*', 'II', 0, 5.6, 0.01]
['/', 'IR', 1, 0.002, 0]
Reg[1]
2e-3/(5.6*0.01) evaluates to 0.03571428571428572
--------
(18+(5*3))^(4-(100-98))
[Brace (][Number ('18', 18.0)][Operator +][Brace (][Number ('5', 5.0)][Operator *][Number ('3', 3.0)][Brace )][Brace )][Operator ^][Brace (][Number ('4', 4.0)][Operator -][Brace (][Number ('100', 100.0)][Operator -][Number ('98', 98.0)][Brace )][Brace )]
(^
  (+
    18
    (* 5 3)
  )
  (-
    4
    (- 100 98)
  )
)
['*', 'II', 0, 5.0, 3.0]
['+', 'IR', 1, 18.0, 0]
['-', 'II', 2, 100.0, 98.0]
['-', 'IR', 3, 4.0, 2]
['^', 'RR', 4, 1, 3]
Reg[4]
(18+(5*3))^(4-(100-98)) evaluates to 1089
